# Pomorks

./: Cargo.toml  package-lock.json  package.json
.github/workflows/: rust.yml
pomorks_data_manage/: Cargo.toml
pomorks_data_manage/src/: data_manage_firebase.rs  data_manage_json.rs  data_manage_trait.rs  lib.rs  todo.rs
pomorks_data_manage/tests/: test_todo.rs
pomorks_gui/: package-lock.json  package.json
pomorks_gui/src/: App.tsx  Timer.tsx  Todo.tsx  TodoList.tsx  pomodoroStatus.tsx  todo.tsx
pomorks_gui/src-tauri/: Cargo.toml  tauri.conf.json
pomorks_gui/src-tauri/src/: main.rs
pomorks_tui/: Cargo.toml
pomorks_tui/src/: app.rs  date_manage.rs  main.rs  notifications.rs  statefull_list.rs  tui.rs  ui.rs
