[package]
name = "pomorks_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
pomorks_data_manage = {path="../pomorks_data_manage"}
winrt-notification="0.5.1"
chrono="0.4"

