[package]
name = "pomorks_tui"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
crossterm = "0.19"
tui = { version = "0.18", default-features = false, features = ['crossterm'] }
pomorks_data_manage = {path="../pomorks_data_manage"}
winrt-notification="0.5.1"
chrono = { version = "0.4", features = ["serde"] }
num-traits="0.2"

